output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_500.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_500.py", line 109
    /* else: */ durations[4])))
    ^
SyntaxError: invalid syntax
